--- a/Rafi.html
+++ b/Rafi.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+
     <title>Document</title>
 </head>
 <body>
-    <h1>Hi There</h1>
+    <div class="RAFI">
+        <h1 class="me">Hi There</h1>
     <h2>This is RAfi from IUBAT</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta repellat voluptas sed quo, delectus illum quos, harum laboriosam ducimus, unde repellendus debitis nisi asperiores nulla modi possimus iusto ipsa. Consequuntur.s</p>
+    </div>
 </body>
 </html>
