--- a/rafi1.html
+++ b/rafi1.html
@@ -9,9 +9,19 @@
 <body>
      <p><h1><i>Introduction: Take Your
         Story Online</i></h1></p>
-       <i> <p><strong>You have stories to share: small stories, big stories, meaningful stories. But not knowing the exact steps to take, you've been hesitant to start a blog.</strong></p><p>If you've never gone through the process, it can seem intimidating to design your blog, find the right host, create content, and become fluent in SEO.
+       <ol><i> <p><strong><li>You have stories to share: small stories, big stories, meaningful stories. But not knowing the exact steps to take, you've been hesitant to start a blog.</li></strong></p><p><li>If you've never gone through the process, it can seem intimidating to design your blog, find the right host, create content, and become fluent in SEO.
 
-        </p><p>But once you know the process, there's a straightforward path. So much so that there are hundreds of millions of blogs in the world, many with active bloggers posting at least once a month.</p><p>The only downside to blogs being so easy to create and update is that they are all vying for a limited amount of attention. This means that you will need to create a beautiful blog with insightful content in order to stand out.</p><p>And, that content needs to be posted regularly because people are drawn to the newest and most relevant blog posts available.
+       </li></p><p><li>But once you know the process, there's a straightforward path. So much so that there are hundreds of millions of blogs in the world, many with active bloggers posting at least once a month.</li></p><p><li>The only downside to blogs being so easy to create and update is that they are all vying for a limited amount of attention. This means that you will need to create a beautiful blog with insightful content in order to stand out.</li></p><p><li>And, that content needs to be posted regularly because people are drawn to the newest and most relevant blog posts available.
 
-        <p></p> By taking the process step-by-step, you can quickly grow your audience and share meaningful content with the world.</p></p></i>
+        <p></p><li> <small>By taking the process step-by-step, you can quickly grow your audience and share meaningful content with the world.</small></li></p></p></i></ol>
         <a href="https://www.youtube.com/results?search_query=html+basic+full"> youtube</a>
+        <h3><ul><li>Mahamudul Hasan</li></ul></h3>
+        <img src="Mahamudul/266261824_2968826203428565_5266928998786745409_n.jpg" alt="">
+    <form action="">        
+        <h3>E-mail:        <input type="gmail"></h3>
+        <h3>Password: <input type="password"></h3>
+        <h3>Age <input type="age"></h3>
+        <h3><button>Suubmit</button><br><button>Cancel</button></h3>
+
+        <h4>Agree <input type="checkbox"></h4>
+    </form>
