--- a/rafi1.html
+++ b/rafi1.html
@@ -24,4 +24,5 @@
         <h3><button>Suubmit</button><br><button>Cancel</button></h3>
 
         <h4>Agree <input type="checkbox"> </h4>
+        <button>Submit</button>
     </form>
