--- a/Rafi.html
+++ b/Rafi.html
@@ -12,9 +12,11 @@
     <div class="RAFI">
         <h1 class="me">Hi There RAfi</h1>
     <h2>This is RAfi from IUBAT hi</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta repellat voluptas sed quo, delectus illum quos, harum laboriosam ducimus, unde repellendus debitis nisi asperiores nulla modi possimus iusto ipsa. Consequuntur.s</p>
+    <p>Lorem ipsumb dolor sit amet consectetur, adipisicing elit. Soluta repellat voluptas sed quo, delectus illum quos, harum laboriosam ducimus, unde repellendus debitis nisi asperiores nulla modi possimus iusto ipsa. Consequuntur.s</p>
     </div>
-    <button></button>
-    <button></button>
+    <button>eeeeeeeeeee</button>
+    <button>eeeeeeeeeee</button>
+   <button>eeeeeeeeeee</button>
+ 
 </body>
 </html>
