--- a/rafi1.html
+++ b/rafi1.html
@@ -16,7 +16,7 @@
         <p></p><li> <small>By taking the process step-by-step, you can quickly grow your audience and share meaningful content with the world.</small></li></p></p></i></ol>
         <a href="https://www.youtube.com/results?search_query=html+basic+full"> youtube</a>
         <h3><ul><li>Mahamudul Hasan</li></ul></h3>
-        <img src="Mahamudul/266261824_2968826203428565_5266928998786745409_n.jpg" alt="">
+        <img src="po231213a.jpg" alt="">
     <form action="">        
         <h3>E-mail:        <input type="gmail"></h3>
         <h3>Password: <input type="password"></h3>
@@ -24,5 +24,14 @@
         <h3><button>Suubmit</button><br><button>Cancel</button></h3>
 
         <h4>Agree <input type="checkbox"> </h4>
-        <button>Submit</button>
+        <button>submit</button>
     </form>
+    <input type="date">
+    <input type="datetime-local">
+    <input type="month">
+    <input type="range">
+    <input type="reset">
+    <input type="url">
+    <input type="week">
+    <input type="tel">
+    <input type="image">
