--- a/rafi1.html
+++ b/rafi1.html
@@ -16,7 +16,9 @@
         <p></p><li> <small>By taking the process step-by-step, you can quickly grow your audience and share meaningful content with the world.</small></li></p></p></i></ol>
         <a href="https://www.youtube.com/results?search_query=html+basic+full"> youtube</a>
         <h3><ul><li>Mahamudul Hasan</li></ul></h3>
-        <img src="po231213a.jpg" alt="">
+          
+        <img src="/raf.jpg" alt="">
+      
     <form action="">        
         <h3>E-mail:        <input type="gmail"></h3>
         <h3>Password: <input type="password"></h3>
@@ -27,7 +29,10 @@
         <button>submit</button>
     </form>
     <input type="date">
+    <br>
     <input type="datetime-local">
+    <br>
+
     <input type="month">
     <input type="range">
     <input type="reset">
