--- a/rafi1.html
+++ b/rafi1.html
@@ -32,11 +32,14 @@
     <br>
     <input type="datetime-local">
     <br>
-
-    <input type="month">
+<div><input type="month">
     <input type="range">
     <input type="reset">
     <input type="url">
     <input type="week">
     <input type="tel">
-    <input type="image">
+    <input type="image"></div>
+    <a href="https://github.com/">GitHub</a><br>
+   <ol> <img src="/raf1.jpg" alt="" srcset="picture of rafi"></ol>
+   <ol><li>rafi</li><br><li>safi</li><br><li>nafisa</li></ol>
+    
