--- a/rafi1.html
+++ b/rafi1.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="rafi.css">
+
     <title>Document</title>
 </head>
 <body>
-     <p><h1><i>Introduction: Take Your
-        Story Online</i></h1></p>
+     <p><h1 class="intro">Introduction: <span class="txt"> Take Your
+        Story Online</span></h1></p>
        <ol><i> <p><strong><li>You have stories to share: small stories, big stories, meaningful stories. But not knowing the exact steps to take, you've been hesitant to start a blog.</li></strong></p><p><li>If you've never gone through the process, it can seem intimidating to design your blog, find the right host, create content, and become fluent in SEO.
 
        </li></p><p><li>But once you know the process, there's a straightforward path. So much so that there are hundreds of millions of blogs in the world, many with active bloggers posting at least once a month.</li></p><p><li>The only downside to blogs being so easy to create and update is that they are all vying for a limited amount of attention. This means that you will need to create a beautiful blog with insightful content in order to stand out.</li></p><p><li>And, that content needs to be posted regularly because people are drawn to the newest and most relevant blog posts available.
@@ -32,7 +34,8 @@
     <br>
     <input type="datetime-local">
     <br>
-<div><input type="month">
+<div class="rafi">
+    <input type="month">
     <input type="range">
     <input type="reset">
     <input type="url">
