--- a/Rafi.html
+++ b/Rafi.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-
     <title>Document</title>
+    <style>
+        p{
+            color: chartreuse
+            ;
+        }
+        h1{
+            color:brown;
+        }
+        
+    </style>
 </head>
 <body>
-    <div class="RAFI">
-        <h1 class="me">Hi There RAfi</h1>
-    <h2>This is RAfi from IUBAT hi</h2>
-    <p>Lorem ipsumb dolor sit amet consectetur, adipisicing elit. Soluta repellat voluptas sed quo, delectus illum quos, harum laboriosam ducimus, unde repellendus debitis nisi asperiores nulla modi possimus iusto ipsa. Consequuntur.s</p>
-    </div>
-    <button>eeeeeeeeeee</button>
-    <button>eeeeeeeeeee</button>
-   <button>eeeeeeeeeee</button>
- 
+    <h1>My nname is Mahamudul Hasan</h1>
+    <p>I am a student of IUBAT</p>
 </body>
 </html>
