--- a/Rafi.html
+++ b/Rafi.html
@@ -7,17 +7,59 @@
     <title>Document</title>
     <style>
         p{
-            color: chartreuse
-            ;
+            color: chartreuse;
+            background-color: darkcyan;
+            width: 300px;
+            font-size: 20px;
         }
         h1{
             color:brown;
+            background-color: antiquewhite;
+            height: 40px;
+            width: 450px;
+            font-size: 32px;
+
+
         }
-        
+        #mother{
+            color: blueviolet;
+        }
+        #she{
+            color:violet;
+            background-color: aqua;
+            height: 20px;
+            width: 200px;
+        }
+        .nk{
+            color: orangered;
+            background-color: yellow;
+            height: 30px;
+            width: 300px;
+            font-size: 20px;
+        }
+        .safi{
+            background-color: dimgray;
+            color: tomato;
+            width: 260px;
+            height: 25px;
+        }
+
     </style>
 </head>
 <body>
     <h1>My nname is Mahamudul Hasan</h1>
-    <p>I am a student of IUBAT</p>
+    <p>I am a student of IUBAT. <br>My father name is Muzibul Haque. <br>He is a Bussinessman. </p>
+     <h3 id="mother">My mother name is Rehana Akhter. </h3>
+     <h4 id="she">She is a house wife.</h4>
+     <h4 class="nk">She works hard every day.</h4>
+     <h5 class="nk">We are three brother and sister.</h5>
+     <h6 class="nk">My sister name is Nafisa.</h6>
+     <h6 class="nk">My brother name is safi.</h6>
+     <ul>
+        <li class="safi">Father: Muzibul Haque.</li>
+        <li class="safi">Mother: Rehana Akhter</li>
+        <li class="safi">Sister: Maimuna Akhter Nafisa.</li>
+        <li class="safi">Brother: Mahabubul Hasan.</li>
+     </ul>
 </body>
 </html>
