--- a/Rafi.html
+++ b/Rafi.html
@@ -38,8 +38,14 @@
             font-size: 20px;
         }
         .safi{
-            background-color: dimgray;
+            background-color:antiquewhite;
             color: tomato;
+            width: 260px;
+            height: 25px;
+        }
+        .safi-h{
+            background-color: darkred;
+            color:khaki;
             width: 260px;
             height: 25px;
         }
@@ -57,9 +63,9 @@
      <h6 class="nk">My brother name is safi.</h6>
      <ul>
         <li class="safi">Father: Muzibul Haque.</li>
-        <li class="safi">Mother: Rehana Akhter</li>
+        <li class="safi-h">Mother: Rehana Akhter</li>
         <li class="safi">Sister: Maimuna Akhter Nafisa.</li>
-        <li class="safi">Brother: Mahabubul Hasan.</li>
+        <li class="safi-h">Brother: Mahabubul Hasan.</li>
      </ul>
 </body>
 </html>
