--- a/tourist.html
+++ b/tourist.html
@@ -11,7 +11,7 @@
             width: 500px;
             height: 40px;
             color:black;
-
+            border-radius: 8px;
         }
         .hh{
             background-color:palegoldenrod;
@@ -19,12 +19,18 @@
             width: 250px;
             height: 25px;
             font-size: 20px;
+            border: 2px solid cadetblue;
+            border-radius: 8px;
         }
         .p1{
             color: darkmagenta;
             background-color: aqua;
             height: 60px;
             width: 1200px;
+            border: 3PX dotted black;
+            border-radius: 8px;
+            margin-left: 40px;
+            margin-bottom: 100px;
         }
     </style>
 </head>
@@ -34,15 +40,15 @@
     <p class="p1">Sundarbans has declared World Heritage Site by UNESCO which is the largest Mangrove Forest situated between two countries. It is the kingdom of Royal Bengal tiger and you will find various kinds of species of birds, animals & plants and I think you should visit the tranquilizing beauty of Sundarbans once in your life.</p>
 
     <h3 class="hh">Chittagong Hill Tracks:</h3>
-    <p>Hills are always enchanting to the tourist and as a tourist, you should obviously visit Chittagong Hill Tracks once which is the home of many tribal and you can discover yourself in the amazing green view. Chittagong Hill Tracks is the best place for making an adventurous tour and for this you have to take permission from the authority</p>
+    <p class="p1">Hills are always enchanting to the tourist and as a tourist, you should obviously visit Chittagong Hill Tracks once which is the home of many tribal and you can discover yourself in the amazing green view. Chittagong Hill Tracks is the best place for making an adventurous tour and for this you have to take permission from the authority</p>
 
     <h3 class="hh">Srimagal:</h3>
-    <p>The Capital of tea in Bangladesh is Srimagal which is situated in the north-eastern part of the country where you will find lush greenery fields all around. It is one of the best places in Bangladesh where you can really have the place & clam environment and there are two more visiting places too, Lawachhara National Park & Hamham Waterfalls.</p>
+    <p class="p1">The Capital of tea in Bangladesh is Srimagal which is situated in the north-eastern part of the country where you will find lush greenery fields all around. It is one of the best places in Bangladesh where you can really have the place & clam environment and there are two more visiting places too, Lawachhara National Park & Hamham Waterfalls.</p>
 
     <h3 class="hh">Rangamati:</h3>
-    <p>The District of Chittagong Hill Tracks area in Rangamati, a place full of natural amusement and here, here, you can find a man-made lake surrounded by Hill called Kaptai Lake where you can take a ride by boat all over the day, a Buddhist Monastery here named Rajban Bihara, a high-quality handicrafts market made by the tribal of Rangamati.</p>
+    <p class="p1">The District of Chittagong Hill Tracks area in Rangamati, a place full of natural amusement and here, here, you can find a man-made lake surrounded by Hill called Kaptai Lake where you can take a ride by boat all over the day, a Buddhist Monastery here named Rajban Bihara, a high-quality handicrafts market made by the tribal of Rangamati.</p>
 
     <h3 class="hh">Bisanakandi:</h3>
-    <p>Undoubtedly it is a great sign of natural beauty surrounded by hills and stones. For its natural beauty, it has become a popular tourist center in Bangladesh. It is situated at the Bangladesh-Sylhet border in Sylhet. In the rainy season it looks like the clouds hugging the mountains, so, winter is not a suitable season for visiting.</p>
+    <p class="p1">Undoubtedly it is a great sign of natural beauty surrounded by hills and stones. For its natural beauty, it has become a popular tourist center in Bangladesh. It is situated at the Bangladesh-Sylhet border in Sylhet. In the rainy season it looks like the clouds hugging the mountains, so, winter is not a suitable season for visiting.</p>
 </body>
 </html>
