--- a/tourist.html
+++ b/tourist.html
@@ -12,6 +12,8 @@
             height: 40px;
             color:black;
             border-radius: 8px;
+            text-align: center;
+            font-weight:50000 ;
         }
         .hh{
             background-color:palegoldenrod;
@@ -21,6 +23,9 @@
             font-size: 20px;
             border: 2px solid cadetblue;
             border-radius: 8px;
+            padding-left: 10px;
+            font-weight:bold;
+            font-family:'Times New Roman', Times, serif;       
         }
         .p1{
             color: darkmagenta;
@@ -31,6 +36,8 @@
             border-radius: 8px;
             margin-left: 40px;
             margin-bottom: 100px;
+            padding: 10px;
+            text-align: justify;
         }
     </style>
 </head>
