--- a/tourist.html
+++ b/tourist.html
@@ -5,41 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tourist Places of Bangladesh</title>
-    <style>
-        .head{
-            background-color:rgb(121, 202, 121);
-            width: 500px;
-            height: 40px;
-            color:black;
-            border-radius: 8px;
-            text-align: center;
-            font-weight:50000 ;
-        }
-        .hh{
-            background-color:palegoldenrod;
-            color: rgb(214, 16, 16);
-            width: 250px;
-            height: 25px;
-            font-size: 20px;
-            border: 2px solid cadetblue;
-            border-radius: 8px;
-            padding-left: 10px;
-            font-weight:bold;
-            font-family:'Times New Roman', Times, serif;       
-        }
-        .p1{
-            color: darkmagenta;
-            background-color: aqua;
-            height: 60px;
-            width: 1200px;
-            border: 3PX dotted black;
-            border-radius: 8px;
-            margin-left: 40px;
-            margin-bottom: 100px;
-            padding: 10px;
-            text-align: justify;
-        }
-    </style>
+    <link rel="stylesheet" href="tour.css">
+ 
 </head>
 <body>
     <h1 class="head">Tourist Places of Bangladesh</h1>
