--- a/Rafi.html
+++ b/Rafi.html
@@ -67,5 +67,6 @@
         <li class="safi">Sister: Maimuna Akhter Nafisa.</li>
         <li class="safi-h">Brother: Mahabubul Hasan.</li>
      </ul>
+     <img src="raf1.jpg" alt="">
 </body>
 </html>
